# codebase_compass

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: code_chunk_repository.py  database.py  project_ai_output_repository.py  project_repository.py  task_repository.py
pages/: project_home.py  projects.py
services/: codebase_service.py  embedding_service.py  llm_service.py  retrieval_service.py  task_service.py  vector_search_service.py
tests/: test_code_chunker.py  test_code_element_locator.py  test_codebase_search.py  test_codebase_service.py  test_database.py  test_embedding_service.py  test_file_reader.py  test_file_scanner.py  test_llm_service.py  test_markdown_formatter.py  test_project_ai_output_repository.py  test_project_repository.py  test_retrieval_service.py  test_task_repository.py  test_task_service.py  test_time_formatter.py  test_vector_search_service.py
utils/: code_chunker.py  code_element_locator.py  file_reader.py  file_scanner.py  markdown_formatter.py  time_formatter.py
