[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-compass"
version = "0.1.0"
description = "Tools for exploring and understanding codebases."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
codebase-compass = "app:main"

[tool.setuptools]
py-modules = ["app"]
packages = ["data", "domain", "pages", "services", "storage", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
